--- a/startup/index.css
+++ b/startup/index.css
@@ -37,11 +37,19 @@ section:nth-child(1) {
 }
 section:nth-child(2) {
   flex: 4;
-  background-color: #444;
+  background-color: #333;
 }
 section:nth-child(3) {
   flex: 1;
   background-color: #222;
+}
+
+#game {
+  background-color: #000;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 form {
