--- a/startup/public/all.css
+++ b/startup/public/all.css
@@ -37,11 +37,15 @@ section:nth-child(1) {
 }
 section:nth-child(2) {
   flex: 4;
-  background-color: #333;
+  background-color: #222;
 }
 section:nth-child(3) {
   flex: 1;
   background-color: #222;
+}
+
+#userName {
+  background-color: #333;
 }
 
 #arena {
@@ -50,6 +54,10 @@ section:nth-child(3) {
   margin-bottom: auto;
   margin-left: auto;
   margin-right: auto;
+}
+
+#controls {
+  background-color: #333;
 }
 
 input {
